--- a/templates/app/views/home/_faq.html.erb
+++ b/templates/app/views/home/_faq.html.erb
@@ -2,7 +2,7 @@
   <%= tag.h2 id: "heading#{faq_counter}", class: "accordion-header" do %>
     <%= button_tag raw(faq[:question]), class: "accordion-button collapsed",
                     type: "button",
-                    data: {"bs-target" => "#collapse#{faq_counter}", "bs-toggle" => "collapse"},
+                    data: { bs_target: "#collapse#{faq_counter}", bs_toggle: "collapse"},
                     aria: { expanded: false, controls: "collapse#{faq_counter}"} %>
   <% end %>
   <%= tag.div id: "collapse#{faq_counter}", class: "accordion-collapse collapse",
