--- a/templates/app/views/shared/chaltron/_navbar.html.erb
+++ b/templates/app/views/shared/chaltron/_navbar.html.erb
@@ -22,7 +22,7 @@
         <li class="nav-item dropdown">
           <% urls = [home_test3_path, home_test4_path, home_test5_path]
              klass = class_names("nav-link", "dropdown-toggle", { active: urls.any? { |url| current_page?(url) } }) %>
-          <%= link_to "#", id: "navbarDropdown", class: klass, data: { "bs-toggle" => "dropdown" } do %>
+          <%= link_to "#", id: "navbarDropdown", class: klass, data: { bs_toggle: "dropdown" } do %>
             <%= icon :fas, "hand-point-down", "Submenu" %>
           <% end %>
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
