add check on current password while changing password

--- a/templates/app/views/chaltron/self_user/change_password.html.erb
+++ b/templates/app/views/chaltron/self_user/change_password.html.erb
@@ -3,8 +3,10 @@
       <div class="col">
         <h3><%= t(".title") %></h3>
 
-        <%= simple_form_for current_user, as: :chaltron_user, url: chaltron_self_user_update_path do |f| %>
+        <%= simple_form_for current_user, as: :chaltron_user,
+                                          url: chaltron_self_user_update_password_path do |f| %>
           <%= f.error_notification %>
+          <%= f.input :current_password %>
           <%= f.input :password %>
           <%= f.input :password_confirmation %>
 
