--- a/templates/app/views/chaltron/_login_navbar.html.erb
+++ b/templates/app/views/chaltron/_login_navbar.html.erb
@@ -3,15 +3,15 @@
       <%# Login navbar %>
     <li class="nav-item dropdown">
       <% active = params[:controller] == "chaltron/self_user"
-         klass = class_names("nav-link dropdown-toggle", { active: active }) %>
+         klass = class_names("nav-link dropdown-toggle", {active: active}) %>
       <%= link_to "#", id: "navbarDropdownLogin", class: klass,
-                       data: { bs_toggle: "dropdown" } do %>
+            data: {"bs-toggle" => "dropdown"} do %>
         <%= display_user_avatar current_user, class: "rounded-circle", size: 23 %>
       <% end %>
       <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="navbarDropdownLogin">
         <li>
           <%= link_to chaltron_self_user_show_path,
-                      class: class_names("dropdown-item", { active: active }) do %>
+                class: class_names("dropdown-item", {active: active}) do %>
             <%= icon :fas, :user, t("chaltron.menu.self_show") %>
           <% end %>
         </li>
@@ -25,7 +25,7 @@
   <% else %>
   <li>
     <%= link_to new_local_session_path,
-                class: class_names("nav-link", { active: current_page?(new_local_session_path) }) do %>
+          class: class_names("nav-link", {active: current_page?(new_local_session_path)}) do %>
       <%= icon :fas, "sign-in-alt", "Login" %>
     <% end %>
   </li>
