--- a/templates/app/views/chaltron/users/_filters.html.erb
+++ b/templates/app/views/chaltron/users/_filters.html.erb
@@ -2,12 +2,12 @@
 <%= simple_form_for filter, as: :filter, url: chaltron_users_path, method: "get" do |f| %>
   <%= hidden_field_tag :page, 1 %>
   <% labels = count[:providers].to_a.map do |x|
-       "#{t("chaltron.users.provider.#{x.first}")} (#{number_with_delimiter(x.last, delimiter: '.')})"
+       "#{t("chaltron.users.provider.#{x.first}")} (#{number_with_delimiter(x.last, delimiter: ".")})"
      end %>
   <%= f.input :providers, collection: labels.zip(count[:providers].keys).to_a,
-                          as: :check_boxes, wrapper: :vertical_collection_inline %>
+        as: :check_boxes, wrapper: :vertical_collection_inline %>
 
-  <% label = "#{t('activemodel.attributes.chaltron/filters/user.never_logged_in')} (#{count[:never_logged_in]})" %>
+  <% label = "#{t("activemodel.attributes.chaltron/filters/user.never_logged_in")} (#{count[:never_logged_in]})" %>
   <%= f.input :never_logged_in, wrapper: :custom_boolean_switch, as: :boolean, label: label %>
   <%= f.submit t(".submit_filters"), class: "btn btn-primary w-100" %>
 <% end %>
@@ -15,6 +15,6 @@
 <hr>
 <%# Reset filters %>
 <%= link_to t(".reset_filters"),
-            { controller: "chaltron/users", action: "index",
-              filter: { providers: [""], never_logged_in: false }, page: 1 },
-            class: "btn btn-primary w-100 mb-3" %>
+      {controller: "chaltron/users", action: "index",
+       filter: {providers: [""], never_logged_in: false}, page: 1},
+      class: "btn btn-primary w-100 mb-3" %>
