--- a/templates/app/views/chaltron/users/index.html.erb
+++ b/templates/app/views/chaltron/users/index.html.erb
@@ -7,12 +7,12 @@
   <% if ldap_enabled? and !Chaltron.ldap_allow_all %>
     <div class="dropdown">
       <%= button_tag type: "button", class: "btn btn-lg btn-primary dropdown-toggle",
-                     data: { bs_toggle: "dropdown" }, aria: { expanded: false },
-                     id: "new_user_button" do %>
+            data: {"bs-toggle" => "dropdown"}, aria: {expanded: false},
+            id: "new_user_button" do %>
         <%= icon :fas, :plus, t(".new_user") %>
       <% end %>
 
-      <%= tag.ul(class: "dropdown-menu", aria: { labelledby: "new_user_button" }) do %>
+      <%= tag.ul(class: "dropdown-menu", aria: {labelledby: "new_user_button"}) do %>
         <li>
           <%= link_to t(".new_ldap_user"), chaltron_ldap_search_path, class: "dropdown-item" %>
         </li>
