fix html.erb linter warning

--- a/templates/app/views/shared/chaltron/_sort.html.erb
+++ b/templates/app/views/shared/chaltron/_sort.html.erb
@@ -8,7 +8,7 @@
         <% links.each do |sort, label| %>
         <li>
           <%= link_to label, request.params.merge(sort_column: sort, page: 1),
-                      class: class_names("dropdown-item", { active: sort_column == sort }) %>
+                class: class_names("dropdown-item", {active: sort_column == sort}) %>
         </li>
         <% end %>
       </ul>
@@ -19,9 +19,9 @@
     </div>
   <% end %>
   <%= link_to(
-        request.params.merge(sort_direction: (sort_direction == "asc" ? "desc" : "asc"), page: 1),
+        request.params.merge(sort_direction: ((sort_direction == "asc") ? "desc" : "asc"), page: 1),
         class: "btn btn-outline-primary"
       ) do %>
-    <%= icon :fas, sort_direction == "desc" ? "sort-alpha-up" : "sort-alpha-down" %>
+    <%= icon :fas, (sort_direction == "desc") ? "sort-alpha-up" : "sort-alpha-down" %>
   <% end %>
 </div>
