--- a/templates/app/views/chaltron/users/_filters.html.erb
+++ b/templates/app/views/chaltron/users/_filters.html.erb
@@ -15,6 +15,5 @@
 <hr>
 <%# Reset filters %>
 <%= link_to t(".reset_filters"),
-      {controller: "chaltron/users", action: "index",
-       filter: {providers: [""], never_logged_in: false}, page: 1},
+      {controller: "chaltron/users", action: "index", filter: "", page: 1},
       class: "btn btn-primary w-100 mb-3" %>
