use strict locals in partials

--- a/templates/app/views/shared/chaltron/_search.html.erb
+++ b/templates/app/views/shared/chaltron/_search.html.erb
@@ -1,5 +1,5 @@
-<% reset_label ||= t(".reset")
-   submit_label ||= t(".submit") %>
+<%# locals: (placeholder:, filter:, url:, reset_label: t("shared.chaltron.search.reset"), submit_label: t("shared.chaltron.search.submit")) -%>
+
 <%= form_with url: url, method: "get" do |f| %>
   <div class="input-group">
     <% %i[per_page sort_column sort_direction].each do |field| %>
