--- a/templates/app/views/shared/chaltron/_sort.html.erb
+++ b/templates/app/views/shared/chaltron/_sort.html.erb
@@ -1,3 +1,5 @@
+<%# locals: (links: ) -%>
+
 <div id="sort" class="btn-group" role="group">
   <% if links.size > 1 %>
     <div class="btn-group" role="group">
