--- a/templates/app/views/shared/chaltron/_per_page.html.erb
+++ b/templates/app/views/shared/chaltron/_per_page.html.erb
@@ -1,4 +1,5 @@
-<% links ||= [10, 20, 50, 100].index_with { |x| t(".per_page", count: x) } %>
+<%# locals: (links: [10, 20, 50, 100].index_with { |x| t("shared.chaltron.per_page", count: x) }) -%>
+
 <div id="sort-per-page" class="dropdown text-nowrap">
   <%= link_to links[per_page], "#",
         data: {bs_toggle: "dropdown"}, aria: {expanded: false},
