separate sorting and paginating modules

--- a/templates/app/views/chaltron/users/_users.html.erb
+++ b/templates/app/views/chaltron/users/_users.html.erb
@@ -6,8 +6,7 @@
     <div class="d-flex mb-3">
       <%# Search form %>
       <div class="flex-grow-1">
-        <%= render("shared/chaltron/search", placeholder: t(".search_placeholder"),
-              filter: @filter, url: chaltron_users_path) %>
+        <%= render("shared/chaltron/search", placeholder: t(".search_placeholder"), url: chaltron_users_path) %>
       </div>
       <%# Per page %>
       <div class="ms-3">
