--- a/templates/app/views/shared/chaltron/_search.html.erb
+++ b/templates/app/views/shared/chaltron/_search.html.erb
@@ -1,4 +1,4 @@
-<%# locals: (placeholder:, filter:, url:, reset_label: t("shared.chaltron.search.reset"), submit_label: t("shared.chaltron.search.submit")) -%>
+<%# locals: (placeholder:, url:, reset_label: t("shared.chaltron.search.reset"), submit_label: t("shared.chaltron.search.submit")) -%>
 
 <%= form_with url: url, method: "get" do |f| %>
   <div class="input-group">
