--- a/templates/app/views/chaltron/users/_user.html.erb
+++ b/templates/app/views/chaltron/users/_user.html.erb
@@ -52,7 +52,7 @@
         <%= button_to chaltron_user_path(user),
               method: :delete,
               class: "btn btn-sm btn-danger ms-1",
-              form: {data: {turbo_confirm: "Sicuro?"}} do %>
+              form: {data: {turbo_confirm: t(".confirm_delete")}} do %>
           <%= icon :fas, :trash %>
         <% end if can?(:destroy, user) %>
       </div>
