add automatic filter submission

--- a/templates/app/views/chaltron/users/_filters.html.erb
+++ b/templates/app/views/chaltron/users/_filters.html.erb
@@ -1,19 +1,18 @@
 <h4><%= t(".filters") %></h4>
-<%= simple_form_for filter, as: :filter, url: chaltron_users_path, method: "get" do |f| %>
+<%= simple_form_for @filter, as: :filter, url: chaltron_users_path, data: {
+            controller: "chaltron--filter", chaltron__filter_frame_value: "chaltron_users"
+          } do |f| %>
   <%= hidden_field_tag :page, 1 %>
   <% %i[per_page sort_column sort_direction].each do |field| %>
     <%= hidden_field_tag field, send(field) %>
   <% end %>
-  <% labels = count[:providers].to_a.map do |x|
-       "#{t("chaltron.users.provider.#{x.first}")} (#{number_with_delimiter(x.last)})"
-     end %>
-  <%= f.input :providers, collection: labels.zip(count[:providers].keys).to_a,
-        as: :check_boxes, wrapper: :vertical_collection_inline %>
-  <% label = "#{t("activemodel.attributes.chaltron/filters/user.never_logged_in")} (#{count[:never_logged_in]})" %>
-  <%= f.input :never_logged_in, wrapper: :custom_boolean_switch, as: :boolean, label: label %>
-  <%= f.submit t(".submit_filters"), class: "btn btn-primary w-100" %>
-<% end %>
-
+   <%= f.input :providers, as: :check_boxes, wrapper: :vertical_collection_inline,
+         collection: @providers,
+         input_html: {data: {action: "chaltron--filter#submit"}} %>
+  <%= f.input :never_logged_in, wrapper: :custom_boolean_switch, as: :boolean,
+        label: @never_logged_in,
+        input_html: {data: {action: "chaltron--filter#submit"}} %>
+ <% end %>
 <hr>
 <%# Reset filters %>
 <%= link_to t(".reset_filters"),
