--- a/templates/app/views/chaltron/users/_users.html.erb
+++ b/templates/app/views/chaltron/users/_users.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-3" id="filters">
-    <%= render "filters", filter: @filter, count: @count_filters %>
+    <%= render "filters" %>
   </div>
   <div class="col-md-9">
     <div class="d-flex mb-3">
