--- a/templates/app/views/chaltron/users/destroy.turbo_stream.erb
+++ b/templates/app/views/chaltron/users/destroy.turbo_stream.erb
@@ -2,6 +2,6 @@
   <%= turbo_stream.remove dom_id(@user) %>
 <% end %>
 <%= turbo_stream.update "filters" do %>
-  <%= render "filters", filter: @filter, count: @count_filters %>
+  <%= render "filters", filter: @filter %>
 <% end %>
 <%= render_turbo_stream_flash_messages %>
