fix linter warnings

--- a/templates/app/views/chaltron/users/_filters.html.erb
+++ b/templates/app/views/chaltron/users/_filters.html.erb
@@ -1,7 +1,8 @@
 <h4><%= t(".filters") %></h4>
-<%= simple_form_for @filter, as: :filter, url: chaltron_users_path, data: {
-            controller: "chaltron--filter", chaltron__filter_frame_value: "chaltron_users"
-          } do |f| %>
+<%= simple_form_for @filter, as: :filter, url: chaltron_users_path,
+      data: {
+        controller: "chaltron--filter", chaltron__filter_frame_value: "chaltron_users"
+      } do |f| %>
   <%= hidden_field_tag :page, 1 %>
   <% %i[per_page sort_column sort_direction].each do |field| %>
     <%= hidden_field_tag field, send(field) %>
