--- a/templates/app/views/chaltron/users/index.html.erb
+++ b/templates/app/views/chaltron/users/index.html.erb
@@ -2,7 +2,6 @@
   <div class="align-self-center">
     <h3><%= t ".title" %></h3>
   </div>
-
   <div>
   <% if ldap_enabled? and !Chaltron.ldap_allow_all %>
     <div class="dropdown">
@@ -29,5 +28,39 @@
   </div>
 </div>
 <%= turbo_frame_tag "chaltron_users" do %>
-  <%= render partial: "users" %>
+  <div class="row">
+    <div class="col-md-3" id="filters">
+      <%= render "filters" %>
+    </div>
+    <div class="col-md-9">
+      <div class="d-flex mb-3">
+        <%# Search form %>
+        <div class="flex-grow-1">
+          <%= render("shared/chaltron/search", placeholder: t(".search_placeholder"), url: chaltron_users_path) %>
+        </div>
+        <%# Per page %>
+        <div class="ms-3">
+          <%= render "shared/chaltron/per_page",
+                links: [10, 20, 50, 100].index_with { |x| t(".per_page", count: x) } %>
+        </div>
+        <%# Sort columns %>
+        <div class="ms-3">
+          <%= render("shared/chaltron/sort",
+                links: sort_columns.index_with do |x|
+                  "#{t(".sorted_by")} #{Chaltron::User.human_attribute_name(x).downcase}"
+                end) %>
+        </div>
+      </div>
+
+      <div class="list-group">
+        <%= render partial: "user", collection: @users, locals: {filter: @filter} %>
+      </div>
+      <div class="mt-3">
+        <%== pagy_info(@pagy) %>
+        <div class="float-end">
+          <%== pagy_bootstrap_nav(@pagy) %>
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
