--- a/templates/app/views/chaltron/_admin_navbar.html.erb
+++ b/templates/app/views/chaltron/_admin_navbar.html.erb
@@ -5,7 +5,7 @@
     <li class="nav-item dropdown">
     <% logs = params[:controller] == "chaltron/logs"
        users = params[:controller] == "chaltron/ldap" ||
-         (params[:controller] == "chaltron/users" and !params[:action].start_with?("self"))
+         (params[:controller] == "chaltron/users" and !action_name.start_with?("self"))
        klass = class_names("nav-link", "dropdown-toggle", {active: logs || users}) %>
       <%= link_to "#", id: "navbarDropdownAdmin", class: klass,
             data: {bs_toggle: "dropdown"} do %>
