--- a/templates/app/views/shared/chaltron/_per_page.html.erb
+++ b/templates/app/views/shared/chaltron/_per_page.html.erb
@@ -1,7 +1,7 @@
 <%# locals: (links: [10, 20, 50, 100].index_with { |x| t("shared.chaltron.per_page", count: x) }) -%>
 
 <div id="sort-per-page" class="dropdown text-nowrap">
-  <%= link_to links[per_page], "#",
+  <%= link_to (links[per_page] || t("shared.chaltron.per_page", count: per_page)), "#",
         data: {bs_toggle: "dropdown"}, aria: {expanded: false},
         class: "btn btn-primary dropdown-toggle" %>
   <ul class="dropdown-menu" aria-labelledby="per-page">
