add a parameter to toggle turbo_prefetch in search/sort/paginate shared partials

--- a/templates/app/views/chaltron/users/_filters.html.erb
+++ b/templates/app/views/chaltron/users/_filters.html.erb
@@ -15,4 +15,4 @@
 <%= link_to t(".reset_filters"),
       {controller: "chaltron/users", action: "index",
        params: {filter: "", page: 1, per_page:, sort_column:, sort_direction:}},
-      class: "btn btn-primary w-100 mb-3" %>
+      class: "btn btn-primary w-100 mb-3", data: {turbo_prefetch: false} %>
