--- a/templates/app/views/shared/chaltron/_per_page.html.erb
+++ b/templates/app/views/shared/chaltron/_per_page.html.erb
@@ -1,14 +1,14 @@
-<%# locals: (links: [10, 20, 50, 100].index_with { |x| t("shared.chaltron.per_page", count: x) }) -%>
+<%# locals: (links: [10, 20, 50, 100].index_with { |x| t("shared.chaltron.per_page", count: x) }, prefetch: true) -%>
 
 <div id="sort-per-page" class="dropdown text-nowrap">
   <%= link_to (links[per_page] || t("shared.chaltron.per_page", count: per_page)), "#",
-        data: {bs_toggle: "dropdown"}, aria: {expanded: false},
+        data: {bs_toggle: "dropdown", turbo_prefetch: prefetch}, aria: {expanded: false},
         class: "btn btn-primary dropdown-toggle" %>
   <ul class="dropdown-menu" aria-labelledby="per-page">
     <% links.each do |count, label| %>
       <li>
       <%= link_to label, request.params.merge(per_page: count, page: 1),
-            class: class_names("dropdown-item", {active: per_page == count}) %>
+            class: class_names("dropdown-item", {active: per_page == count}), data: {turbo_prefetch: prefetch} %>
       </li>
     <% end %>
   </ul>
