--- a/templates/app/views/chaltron/users/_user.html.erb
+++ b/templates/app/views/chaltron/users/_user.html.erb
@@ -40,11 +40,13 @@
           <% end %>
           <% if user != current_user %>
             <%= button_to disable_chaltron_user_path(user),
-                  class: "btn btn-sm btn-danger ms-1" do %>
+                  class: "btn btn-sm btn-danger ms-1",
+                  form: {data: {turbo_frame: "_top"}} do %>
               <%= icon :fas, "user-slash" %>
             <% end if user.enabled? %>
             <%= button_to enable_chaltron_user_path(user),
-                  class: "btn btn-sm btn-primary ms-1" do %>
+                  class: "btn btn-sm btn-primary ms-1",
+                  form: {data: {turbo_frame: "_top"}} do %>
               <%= icon :fas, :user %>
             <% end if user.disabled? %>
           <% end %>
@@ -52,7 +54,7 @@
         <%= button_to chaltron_user_path(user),
               method: :delete,
               class: "btn btn-sm btn-danger ms-1",
-              form: {data: {turbo_confirm: t(".confirm_delete")}} do %>
+              form: {data: {turbo_confirm: t(".confirm_delete"), turbo_frame: "_top"}} do %>
           <%= icon :fas, :trash %>
         <% end if can?(:destroy, user) %>
       </div>
