--- a/templates/app/views/home/_carousel.html.erb
+++ b/templates/app/views/home/_carousel.html.erb
@@ -1,11 +1,9 @@
 <div id="main-carousel" class="carousel slide" data-bs-ride="carousel">
-
-  <ol class="carousel-indicators">
-    <li data-bs-target="#main-carousel" data-bs-slide-to="0" class="active"></li>
-    <li data-bs-target="#main-carousel" data-bs-slide-to="1"></li>
-    <li data-bs-target="#main-carousel" data-bs-slide-to="2"></li>
-  </ol>
-
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
       <%= image_tag("slide1.gif", class: "d-block w-100 rounded-3") %>
