--- a/templates/app/views/shared/chaltron/_footer.html.erb
+++ b/templates/app/views/shared/chaltron/_footer.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-bottom navbar-dark bg-dark py-0">
+<nav class="navbar fixed-bottom py-0 border-top">
   <div class="container-fluid">
     <%= tag.div class: "navbar-text" do %>
       <%= icon(:fab, :github) %>
