--- a/templates/app/views/home/test.html.erb
+++ b/templates/app/views/home/test.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-light rounded-3">
+<div class="rounded-3">
   <div class="container-fluid p-5 fs-4">
     <h1 class="display-5 fw-bold">Test #<%= @test %></h1>
     <p>
