--- a/templates/app/views/shared/chaltron/_flash.html.erb
+++ b/templates/app/views/shared/chaltron/_flash.html.erb
@@ -1,6 +1,6 @@
 <% flash.each do |type, message| %>
   <%# devise adds a :timedout key to the flash hash, which is not meant for display %>
-  <%= tag.div class: "alert #{bootstrap_class_for(type)} rounded-0 m-0",
+  <%= tag.div class: "alert #{bootstrap_class_for(type)} m-2",
         data: {
           controller: "chaltron--remove",
           action: "click->chaltron--remove#remove"
