--- a/templates/app/views/shared/chaltron/_navbar.html.erb
+++ b/templates/app/views/shared/chaltron/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav id="navbar-top" class="navbar navbar-expand-lg navbar-dark bg-dark py-0">
+<nav id="navbar-top" class="navbar navbar-expand-lg py-0 border-bottom">
   <div class="container-fluid mx-auto">
     <%= link_to "Home page", root_path, class: "navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -25,7 +25,7 @@
           <%= link_to "#", id: "navbarDropdown", class: klass, data: {bs_toggle: "dropdown"} do %>
             <%= icon :fas, "hand-point-down", "Submenu" %>
           <% end %>
-          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li>
               <%= link_to home_test3_path,
                     class: class_names("dropdown-item", {active: current_page?(home_test3_path)}) do %>
@@ -50,6 +50,7 @@
       <%# Right navbar %>
       <%= render "chaltron/admin_navbar" %>
       <%= render "chaltron/login_navbar" %>
+      <%= render "chaltron/dark_mode_navbar" %>
     </div>
   </div>
 </nav>
