--- a/templates/app/views/devise/passwords/new.html.erb
+++ b/templates/app/views/devise/passwords/new.html.erb
@@ -13,7 +13,10 @@
           </div>
         </div>
         <hr>
-        <p><%= t ".par2_html" %></p>
+        <p>
+          <%= t ".par2" %>
+          <%= link_to "Login", new_local_session_path, class: "btn btn-primary btn-sm" %>
+        </p>
       <% end %>
     </div>
   </div>
